# PIDcV6

./: .bb_tool_cfg  .gitignore  APOSTILA_CONTROLE.tex  CMakeLists.txt  PROBLEMASBALL.md  PROMPT VERSAO EXTENDIDA.md  README.md  RELATORIO_TECNICO.tex  SERIAL_COMMANDS.md  TEORIA.md  bb_tool.bat  bb_tool.ps1  sdkconfig.defaults
exemplo/: vk_firmware_tool.bat  vk_firmware_tool.ps1
main/: CMakeLists.txt  cal_store.c  cal_store.h  control.c  control.h  kinematics.c  kinematics.h  main.c  pid.c  pid.h  steppers.c  steppers.h  touch_screen.c  touch_screen.h
tools/: PIDSimba.bat  PIDSimba.py  calibrate.bat  calibrate.py  config.py  requirements.txt  sim_pid.py
